# RL-Trader

./: LICENSE  pyproject.toml  requirements.txt
data/: data_processing.py
data/archive/: ABBV.csv  ABT.csv  AMT.csv  AXP.csv  BABA.csv  BAC.csv  BMY.csv  BRK.B.csv  BSX.csv  BTI.csv  BUD.csv  C.csv  CAT.csv  COP.csv  DHR.csv  ENB.csv  FI.csv  GE.csv  HSBC.csv  IBN.csv  ICE.csv  KO.csv  LLY.csv  LMT.csv  LOW.csv  MA.csv  MCD.csv  MCK.csv  MO.csv  MRK.csv  NEE.csv  NKE.csv  NOW.csv  PFE.csv  PG.csv  PM.csv  RELX.csv  RIO.csv  SO.csv  SYK.csv  (+12 more)
data/blueChips/: AMZN.csv  GOOGL.csv  JPM.csv  MSFT.csv  PFE.csv  XOM.csv
data/csv/archive/: ACN.csv  BA.csv  BHP.csv  BLK.csv  BX.csv  CB.csv  CI.csv  CRM.csv  CVX.csv  DE.csv  DIS.csv  DUK.csv  ELV.csv  ETN.csv  GS.csv  HD.csv  HDB.csv  IBM.csv  JNJ.csv  JPM.csv  MDT.csv  MMC.csv  MS.csv  MUFG.csv  NVO.csv  NVS.csv  ORCL.csv  PGR.csv  PLD.csv  RTX.csv  RY.csv  SAN.csv  SAP.csv  SCHW.csv  SHEL.csv  SHW.csv  SMFG.csv  SONY.csv  SPGI.csv  SPOT.csv  (+8 more)
data/csv/blueChips/: AAPL.csv  CAT.csv  IBM.csv  WMT.csv
data/features/blueChips/: AAPL_features.parquet  AMZN_features.parquet  CAT_features.parquet  GOOGL_features.parquet  IBM_features.parquet  JPM_features.parquet  MSFT_features.parquet  PFE_features.parquet  WMT_features.parquet  XOM_features.parquet
data/network/: dataFetcher.py
notebooks/: log_return.ipynb  processing.ipynb
notebooks/dataProcsessing/: check_dates.ipynb  log_return.ipynb
scripts/: load_features.py
src/data_loader/: check_dates.py  load_features.py  process_features.py
tests/: check_dates.py
(+2 files in other folders)
